feat/observe file error